[project]
name = "lecture-1"
version = "0.1.0"
description = ""
authors = [
    {name = "milkpackage",email = "93259269+milkpackage@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [{include = "lecture_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
